{
    "name": "EscInput",
    "maps": [
        {
            "name": "EscMenu",
            "id": "dbd6733d-579a-4cc7-bce6-af1e4e16d2fb",
            "actions": [
                {
                    "name": "BackMenu",
                    "type": "Button",
                    "id": "7d0fc75c-f7c0-4c8f-9fe6-2059e29ce4eb",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "645aba0e-bd15-42dd-b4ad-805cbf6634f4",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BackMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "EscMenu",
            "bindingGroup": "EscMenu",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}